# LOG6953FEProjectHiver20205

./: .gitignore  CMakeLists.txt  Idea.ignore  LICENSE  README.md  data.txt  docker-compose.yml  generate_dataset.py  launch_services.sh  main.cpp  requirements.txt  serializer.cpp  sink_operator_backup_code
godot-scene/: DT Project.sln  RabbitMQListener.cs  building.tscn  building_script.gd  camera_3d.gd  city_generator.gd  icon.svg.import  listener.py  node_3d.tscn  project.godot  road.tscn
godot-scene/addons/: icon.png.import  icon.svg.import
godot-scene/assets/: large_buildingA.obj.import  large_buildingB.obj.import  large_buildingC.obj.import  large_buildingD.obj.import  large_buildingE.obj.import  large_buildingF.obj.import  large_buildingG.obj.import  skyscraperB.obj.import  skyscraperC.obj.import  skyscraperD.obj.import  skyscraperE.obj.import  skyscraperF.obj.import  small_buildingB.obj.import  small_buildingE.obj.import
godot-scene/assets/road/: roof_center.obj.import
godot-scene/scenes/: building.tscn  node_3d.tscn  road.tscn
neo4j/: execute_prop_query.py  neo4j_auth.py  push_data_to_db.py  start_neo4j.sh
rabbitmq/: check_results.py  graph_db_service.py  service.py  service2.py  start_rabbitmq.sh  test_connection.py
scripts/: disable_serialize_deserialize_env.sh  run_perf.py  set_coldrun_env.sh  set_data_paths.sh  set_hotrun_env.sh  set_state_sharing_env.sh  unset_env.sh
src/: main.cpp
src/data/: CMakeLists.txt  CSVIngestor.cpp  serialize_deserialize.cpp  serlalize_deserialize.cpp
src/data/include/: CSVIngestor.cpp  CSVIngestor.hh  serialize_deserialize.hh
src/debug/: CMakeLists.txt  memory_debug.cpp  operator_debug.cpp  parser_debug.cpp
src/debug/include/: memory_debug.hh  operator_debug.hh  parser_debug.hh
src/engine/: CMakeLists.txt  pipeline.cpp
src/engine/include/: pipeline.hh
src/graph/: CMakeLists.txt  adjlist.cpp  arena_allocator.cpp  datasource.cpp  datastore.cpp  graph.cpp  sampledata.cpp
src/graph/include/: adjlist.hh  arena_allocator.hh  datasource.hh  datastore.hh  graph.hh  sampledata.hh
src/memory/: CMakeLists.txt  bitmask.cpp  context.cpp  state.cpp  vector.cpp
src/memory/include/: bitmask.hh  context.hh  state.hh  state_hash.hh  vector.hh
src/operator/: CMakeLists.txt  cascade_selection_operator.cpp  hardcoded_linear_plan_sink_packed.cpp  index_nested_loop_join_operator.cpp  index_nested_loop_join_packed_operator.cpp  index_nested_loop_join_to_1_operator.cpp  operator_definition.cpp  operator_utils.cpp  scan_failure_prop_operator.cpp  scan_operator.cpp  schema.cpp  sink_failure_prop.cpp  sink_no_op.cpp  sink_operator.cpp  sink_packed_min_operator.cpp  sink_packed_operator.cpp  sink_packed_post_order_operator.cpp
src/operator/include/: cascade_selection_operator.hh  hardcoded_linear_plan_sink_packed.hh  index_nested_loop_join_operator.hh  index_nested_loop_join_packed_operator.hh  index_nested_loop_join_to_1_operator.hh  operator_definition.hh  operator_types.hh  operator_utils.hh  relation_types.hh  scan_failure_prop_operator.hh  scan_operator.hh  schema.hh  sink_failure_prop.hh  sink_no_op.hh  sink_operator.hh  sink_packed_min_operator.hh  sink_packed_operator.hh  sink_packed_post_order_operator.hh
src/parser/: CMakeLists.txt  factorized_tree.cpp  factorized_tree_element.cpp  query_parser.cpp
src/parser/include/: factorized_tree.hh  factorized_tree_element.hh  logical_pipeline_element.hh  query_parser.hh
src/utils/: CMakeLists.txt  debug_enabled.cpp  modes.cpp  testpath.cpp
src/utils/include/: debug_enabled.h  debug_enabled.hh  modes.hh  testpaths.hh
tests/: CMakeLists.txt  dump_results.py  print_results.py  run_with_profiling.sh  stats.py  test1.cpp  test10.cpp  test11_left_deep_packed.cpp  test12_left_deep.cpp  test13_packed.cpp  test14_packed.cpp  test15_packed.cpp  test16_packed.cpp  test17_packed.cpp  test18.cpp  test19.cpp  test2.cpp  test20.cpp  test21.cpp  test22.cpp  test23_4hop_packed.cpp  test24_4hop_unpacked.cpp  test25_4hop_noop.cpp  test25_4hop_unpacked_noop.cpp  test26_4hop_packed.cpp  test27_4hop_unpacked.cpp  test28_4hop_noop.cpp  test28_4hop_unpacked_noop.cpp  test29_4hop_packed_noop.cpp  test3.cpp  test30_4hop_packed_noop.cpp  test4.cpp  test5.cpp  test6.cpp  test7.cpp  test8.cpp  test9.cpp
