add_library(libdata STATIC CSVIngestor.cpp serialize_deserialize.cpp)
target_include_directories(libdata PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)
find_package(Threads REQUIRED)
target_link_libraries(libdata PRIVATE Threads::Threads)
if (CMAKE_BUILD_TYPE STREQUAL "Debug")
    add_compile_definitions(MY_DEBUG)
endif()
